# purely-functional-programming-language

./: .gitignore  README.md  flake.nix  format-haskell-code.sh  install-tools.sh  purely-functional.cabal
src/PF/Check/: Constraint.hs  Infer.hs  Kind.hs  Subst.hs  Type.hs  Unify.hs
src/PF/Compile/: Expr.hs  LambdaLift.hs  Linearise.hs
src/PF/Data/: MMap.hs  Row.hs
src/PF/Expr/: Core.hs  In.hs  LambdaLifted.hs  Linearised.hs  QualNamed.hs  Qualified.hs  Typed.hs
src/PF/Unify/: InferKind.hs  Kind.hs  Subst.hs  Type.hs
src/PF/Unify/Data/: Env.hs  Kind.hs  Type.hs
src/PFL/Compile/: LambdaLift.hs  Linearise.hs  Qualify.hs  Thread.hs
src/PFL/Expr/: In.hs  LambdaLifted.hs  Qualified.hs
src/PFL/Typing/: Check.hs  Collect.hs  Kind.hs  Type.hs
test/: Main.hs
test/Test/: Sexp.hs
test/Test/PF/: LambdaLift.hs  Linearise.hs
test/Test/Sexp/: Expr.hs
test/Theory/: FunctionNotation.hs
