cabal-version: 3.8
name: purely-functional
version: 0.1.0.0

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        DataKinds,
        DerivingVia,
        LambdaCase,
        OverloadedStrings,
        RecordWildCards,
        TypeFamilies,
    build-depends:
        base ^>=4.21.0.0,
        comonad,
        containers,
        data-fix,
        free,
        mtl,
        optics,
        recursion-schemes,
        text,
        transformers-compat,

library
    import: shared
    hs-source-dirs: src
    exposed-modules:
        PF.Check.Constraint
        PF.Check.Type
        PF.Check.Unify
        PF.Compile.LambdaLift
        PF.Compile.Linearise
        PF.Expr.LambdaLifted
        PF.Expr.Qualified
        PF.Expr.Typed

test-suite purely-functional-test
    import: shared
    default-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules:
        Test.PF.Linearise
        Test.PF.LambdaLift
        Test.Sexp
        Test.Sexp.Expr
        Theory.FunctionNotation
    build-depends:
        purely-functional,
        tasty,
        tasty-hunit,
